src/app/components/article-grid/article-grid.component.scss
@use '../../../styles/abstracts/mixins' as *;

$card-min-width: 190px;
$card-max-width: 310px;
$grid-gap: 8px;

:host {
  display: flex;
  container-type: inline-size;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.article-grid {
  display: flex;
  flex: 1;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  gap: $grid-gap;

  @container (width >= calc(2 * #{$card-min-width} + #{$grid-gap})) {
    &:not([card-count='1']) {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax($card-min-width, 1fr));
    }
  }

  @for $n from 2 through 4 {
    @container (width >= calc(#{$n} * #{$card-max-width} + #{($n - 1)} * #{$grid-gap})) {
      &[card-count='#{$n}'] {
        display: flex;
      }
    }
  }

  .article {
    opacity: 0;
    display: flex;
    flex-flow: column nowrap;
    gap: 4px;
    max-width: $card-max-width;
    height: auto;
    border-radius: var(--lcc-borderRadius--large);
    background-color: var(--lcc-color--articleGrid-cardBackground);
    transition:
      transform 0.3s ease,
      background-color 0.3s ease;
    animation: fade-in-up 1s ease-out forwards;

    &:hover {
      background-color: var(--lcc-color--articleGrid-cardBackgroundOnHover);
      cursor: pointer;
      transform: scale(1.005);
    }

    .image-container {
      overflow: hidden;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      aspect-ratio: 3 / 2;
      border-top-left-radius: var(--lcc-borderRadius--large);
      border-top-right-radius: var(--lcc-borderRadius--large);
      background-color: var(--lcc-color--contentPlaceholder-background);
    }

    img {
      max-width: 100%;
      max-height: 100%;
      // Slightly scale up images to avoid tiny gaps around them
      transform: scale(1.02);

      object-fit: contain;
    }

    .bookmark-icon {
      z-index: 10;
      position: absolute;
      width: 24px;
      height: 24px;
      margin: 4px;
      color: var(--lcc-color--articleGrid-bookmarkIcon);
    }

    .article-summary-container {
      display: flex;
      flex-flow: column nowrap;
      justify-content: space-between;
      height: 100%;
      padding: 8px 12px;

      .article-title {
        // Hardcode height to ensure title sections align between cards
        // regardless of whether there is 1 or 2 lines of text
        height: 2.3em;
        font-weight: 400;
        text-align: center;
        color: var(--lcc-color--articleGrid-articleHeaderText);
      }

      hr {
        width: 100%;
        margin: 8px 0;
        border-top: 1px solid var(--lcc-color--articleGrid-cardDividerLine);
      }

      .article-preview {
        // Hardcode to keep alignment in case there are fewer than 5 lines of text
        height: 85px;
        font-size: 13px;
        line-height: 1.3em !important;
        color: var(--lcc-color--articleGrid-articleSummaryText);

        ::ng-deep .result-preview-rating {
          font-size: 12px;
          color: var(--lcc-color--articleGrid-articleSummarySecondaryText);
        }
      }

      .article-creation-date {
        margin-top: 8px;
        font-size: 11px;
        text-align: center;
        color: var(--lcc-color--articleGrid-articleCreationDateText);
      }
    }
  }
}

@keyframes fade-in-up {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

